# ChangeLog for media-sound/tinysid
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tinysid-0.94 (05 Apr 2013)

  05 Apr 2013; Vincent Hardy <vincent.hardy.be@gmail.com>
  +tinysid-0.94.ebuild, +metadata.xml:
  Initial import of tinysid
