@@ -1,4 +1,4 @@
 DIST tinysid-linux.tar.gz 20518 SHA256 868f5984c266afbe3facaaca09c4aa5b478b9ffbfa4d660099efb5bade9f0549 SHA512 3c5ccdceae2f089d61c4032bdce8d6b3fee0420188655fc6ba4352f82e5e5a023e6bd74b3db978f038c71c3a127fd75824197db77da76abe9588ad4737c603b5 WHIRLPOOL 2a8816eb1f06325f1481a7fd6b3308125b6c436463f3dc410d8ff6bff2081330d53aa5d3507e2d6c227c54c02d92379a40945fbd2c93876fb97ab36db8b86940
-EBUILD tinysid-0.94.ebuild 756 SHA256 5a25e8cf7a71be0324b0d8ef56d35f209b7288275a0da361831c2b813d95c9ed SHA512 81a1cda5eadd5ac9795d8d9eac6e34b5b0759c4713071f274a7b43ccf5c0f280c461e541957d961313fedc3412e4ecb60d37cdab6d71d146f842eaa3b792a985 WHIRLPOOL c5386b5815032ad9d7f2149f9d98efdddb06327a858eb53b7dc726a73dc40d4424a02a358aed47c7e6105887cb69784712ed6e663368b61e1fa824c8517bb6a0
-MISC ChangeLog 275 SHA256 363450cee830e9033a0b2c55b482c4e26224c57dd6961944e43968cc23e3e105 SHA512 0dd091816b06d32c890937da88c5c6b3484e565f6bd61454126c49e8e42a32e392ded5490f617909f04b19ae1d15a0136e2e183327abb297bcd9ff52ed0f3079 WHIRLPOOL 4f99bc26daaec0c0bbd7aa714e3514c2c35cd3fecc28008e44499c637773e29aacc10326e0c2b1cef7fbf0ed2ce0ab2f0de1d5f88e3b373bdc5d785f650246bc
+EBUILD tinysid-0.94.ebuild 842 SHA256 2a3019eedf28ce0d894b36a0daaefed2c94c8f39c7c6276020448187cbac9fcb SHA512 fed3584aa0b3a6b84794346b62847126ed7e217d8f15400429aaee5923bdae53927f8be6739e21891b616ea49971876326e8b0b0821ace6b931a155c30a66c82 WHIRLPOOL 6a2bc824734c9cd21a62bd10a280b16b503782e108113693581abc67e6c4f2301384c5834a468b5cccc57a7921dde8fec0896d51d4a69e2b523d1ae730575686
+MISC ChangeLog 382 SHA256 55a969210dd1e9a77eb284db76514378698fa74fccb6f9b4cf41b7cbd71a5fb3 SHA512 1f17f4fe44e9c7151ccb121c42717a8901ac1c004c6ad50541473193b9b0c83ff98d08da14010f5ecab25fdd9245b1dae685be3578a9d749aa34925017f5c9d9 WHIRLPOOL 5a7dc449a344b24ff2d3b179f8cfee838ece57b2123146be4930d2bff171b5e1f4032a62cfafa1ce27997aee2c0708864f15fb69ec6498ae794a341abf5ced85
 MISC metadata.xml 475 SHA256 808ef5e92e308131e447f23d9de127cb8fe000e0d5f71bceba4db2aa11096d7d SHA512 0c14ffc8fe699f96282cac215193d5f2f92810b0a066995ab8eac505e88d11138b5212a5add2fc2483052d0362ba178cc2828a2aa8b019d0baa3f6856648f7e7 WHIRLPOOL 0757433a5c50b9d5a07fbdd549c3d6f61e5e459f8bc8e838a995625d7d6449f713e4be3ae73a754d05e5ab337764404ea35ac55da0accdff94d97773f01bee02
