@@ -1,8 +1,11 @@
 # ChangeLog for media-sound/tinysid
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*tinysid-0.94 (05 Apr 2013)
+*tinysid-0.94 (26 mar 2015)
+
+  26 Mar 2015; Vincent Hardy <vincent.hardy.be@gmail.com>
+  Add ~arm keyword, update SRC_URI and HOMEPAGE
 
   05 Apr 2013; Vincent Hardy <vincent.hardy.be@gmail.com>
   +tinysid-0.94.ebuild, +metadata.xml:
